# foldr

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
foldr/: cli.py  core.py  io.py  metrics.py  phase.py  plotting.py  render.py  search.py
tests/: conftest.py  test_cli.py  test_core.py  test_io.py  test_metrics.py  test_phase.py  test_plotting.py  test_search.py
